[#83889] Fixed sonar remarks